Added the ESM and CJS support build

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-.vscode
-node_modules
+# IDE/editor configs
+.vscode/
+.idea/
+*.swp
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output
+dist/
+coverage/
+*.tsbuildinfo
+
+# Env/config
+.env
+.env.local
+.env.*.local
+
+# OS specific
+.DS_Store
+Thumbs.db
